--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^1.6.8",
-    "@react-pdf/styled-components": "github:react-pdf/styled-components",
+    "@react-pdf/styled-components": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "pdfmake": "file:pdfmake",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
